# RucoyMapParser

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
OldRucoyMapParser/: ByteStream.h  CMakeLists.txt  Metrics.h  MusicRegion.h  Parser.cpp  Parser.h  Parser115.h  Parser118.cpp  Parser118.h  TextureParser.h  main.cpp
